...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ob_pace_back"
            style="@style/Button.IconCircle"
            android:layout_gravity="start"
            android:contentDescription="@string/cd_back"
            app:icon="@drawable/ic_arrow_left"
            app:iconTint="@color/md_on_surface"
            app:backgroundTint="@android:color/transparent" />
...
